--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "bundle-stats-webpack-plugin": "^4.5.2",
     "history": "^5.3.0",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
@@ -43,10 +44,12 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.1",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
