--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/js-cookie": "^3.0.3",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "bundle-stats-webpack-plugin": "^4.5.2",
     "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "qiankun": "^2.10.11",
@@ -40,6 +42,7 @@
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
