--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "js-cookie": "^3.0.5",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
+    "nprogress": "^0.2.0",
     "qiankun": "^2.10.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4"
   },
   "scripts": {
-    "start": "webpack serve --mode=development",
+    "start": "webpack serve --mode=development --config=./webpack.config.ts",
     "build": " webpack --mode=production"
   },
   "browserslist": {
@@ -38,8 +39,10 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@svgr/webpack": "^8.0.1",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^20.4.8",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
