--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "bundle-stats-webpack-plugin": "^4.5.2",
+    "dom-to-image": "^2.6.0",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
@@ -40,6 +42,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@svgr/webpack": "^8.0.1",
+    "@types/dom-to-image": "^2.6.4",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/node": "^20.4.8",
     "@types/nprogress": "^0.2.0",
