--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^7.63.0",
     "@types/js-cookie": "^3.0.3",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
