--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "qiankun": "^2.10.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "universal-cookie": "^5.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server --mode=development --config=./webpack.config.js",
