--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/dom-to-image": "^2.6.4",
     "@types/html-webpack-plugin": "^3.2.6",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.8",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.18",
