feat error reappear on browser

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
+    "rrweb": "^2.0.0-alpha.4",
+    "rrweb-player": "^1.0.0-alpha.4",
     "universal-cookie": "^5.0.0"
   },
   "scripts": {
