--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --mode=development --config=./webpack.config.js",
+    "start:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
     "build": " webpack --mode=production"
   },
   "browserslist": {
@@ -59,6 +60,7 @@
     "@typescript-eslint/parser": "^6.2.1",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.33.1",
