--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "universal-cookie": "^5.0.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode=development --config=./webpack.config.js",
-    "start:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
+    "start":"vite",
+    "start-w": "webpack-dev-server --mode=development --config=./webpack.config.js",
+    "start-w:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
     "build": " webpack --mode=production"
+
   },
   "browserslist": {
     "production": [
@@ -47,6 +49,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@svgr/webpack": "^8.0.1",
+    "@swc/core": "^1.3.78",
     "@types/dom-to-image": "^2.6.4",
     "@types/html-webpack-plugin": "^3.2.6",
     "@types/lodash": "^4.14.197",
@@ -58,6 +61,7 @@
     "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
@@ -68,6 +72,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "react-dev-utils": "^12.0.1",
     "style-loader": "^3.3.3",
+    "swc-loader": "^0.2.3",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
