--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "dependencies": {
     "@sentry/react": "^7.63.0",
-    "@types/js-cookie": "^3.0.3",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
-    "bundle-stats-webpack-plugin": "^4.5.2",
     "dom-to-image": "^2.6.0",
-    "history": "^5.3.0",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "mobx": "^6.10.0",
@@ -20,20 +17,18 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "rrweb": "^2.0.0-alpha.4",
-    "rrweb-player": "^1.0.0-alpha.4",
-    "universal-cookie": "^5.0.0"
+    "rrweb-player": "^1.0.0-alpha.4"
   },
   "scripts": {
-    "start":"vite",
-    "build":"vite build",
-    "preview":"vite preview",
-    "start:base":"cross-env BASE_ENV=true vite",
-    "build:base":"cross-env BASE_ENV=true vite build",
-    "preview:base":"cross-env BASE_ENV=true vite preview",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start:base": "cross-env BASE_ENV=true vite",
+    "build:base": "cross-env BASE_ENV=true vite build",
+    "preview:base": "cross-env BASE_ENV=true vite preview",
     "start-w": "webpack-dev-server --mode=development --config=./webpack.config.js",
     "start-w:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
     "build-w": " webpack --mode=production"
-
   },
   "browserslist": {
     "production": [
@@ -48,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "bundle-stats-webpack-plugin": "^4.5.2",
+    "@types/js-cookie": "^3.0.3",
     "@babel/core": "^7.22.9",
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.9",
