--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@sentry/react": "^7.63.0",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "dom-to-image": "^2.6.0",
+    "echarts": "^5.4.3",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "mobx": "^6.10.0",
@@ -43,8 +45,6 @@
     ]
   },
   "devDependencies": {
-    "bundle-stats-webpack-plugin": "^4.5.2",
-    "@types/js-cookie": "^3.0.3",
     "@babel/core": "^7.22.9",
     "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.9",
@@ -54,6 +54,7 @@
     "@swc/core": "^1.3.78",
     "@types/dom-to-image": "^2.6.4",
     "@types/html-webpack-plugin": "^3.2.6",
+    "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.4.8",
     "@types/nprogress": "^0.2.0",
@@ -65,6 +66,7 @@
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "babel-loader": "^9.1.3",
+    "bundle-stats-webpack-plugin": "^4.5.2",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
