--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^16.3.1",
     "echarts": "^5.4.3",
+    "hash.js": "^1.1.7",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "mobx": "^6.10.0",
