--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
     "@sentry/react": "^7.63.0",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "dom-to-image": "^2.6.0",
-    "dotenv": "^16.3.1",
     "echarts": "^5.4.3",
     "hash.js": "^1.1.7",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
     "nprogress": "^0.2.0",
@@ -82,6 +83,8 @@
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "dotenv": "^16.3.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
