--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "preview:base": "cross-env BASE_ENV=true vite preview",
     "start-w": "webpack-dev-server --mode=development --config=./webpack.config.js",
     "start-w:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
-    "build-w": " webpack --mode=production"
+    "build-w": " webpack --mode=production",
+    "precommit": "eslint --fix . --ext .js,.jsx"
   },
   "browserslist": {
     "production": [
@@ -53,6 +54,7 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@rrweb/types": "2.0.0-alpha.11",
     "@svgr/webpack": "^8.0.1",
     "@swc/core": "^1.3.78",
     "@types/dom-to-image": "^2.6.4",
@@ -73,10 +75,15 @@
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.1",
     "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "^3.0.3",
     "react-dev-utils": "^12.0.1",
     "style-loader": "^3.3.3",
     "swc-loader": "^0.2.3",
@@ -84,7 +91,6 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
-    "dotenv": "^16.3.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
