--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,12 +15,10 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint",
-        "react",
-        "prettier"
-    ],
+    "plugins": ["@typescript-eslint", "react", "prettier"],
     "rules": {
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "off"
     }
 }
