--- a/package.json
+++ b/package.json
@@ -1,97 +1,97 @@
 {
-  "name": "qiankun-base",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^5.2.5",
-    "@sentry/react": "^7.63.0",
-    "antd": "^5.7.3",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.9",
-    "dom-to-image": "^2.6.0",
-    "echarts": "^5.4.3",
-    "hash.js": "^1.1.7",
-    "html2canvas": "^1.4.1",
-    "js-cookie": "^3.0.5",
-    "lodash": "^4.17.21",
-    "mobx": "^6.10.0",
-    "mobx-react-lite": "^4.0.3",
-    "nprogress": "^0.2.0",
-    "qiankun": "^2.10.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
-    "rrweb": "^2.0.0-alpha.4",
-    "rrweb-player": "^1.0.0-alpha.4"
-  },
-  "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start:base": "cross-env BASE_ENV=true vite",
-    "build:base": "cross-env BASE_ENV=true vite build",
-    "preview:base": "cross-env BASE_ENV=true vite preview",
-    "start-w": "webpack-dev-server --mode=development --config=./webpack.config.js",
-    "start-w:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
-    "build-w": " webpack --mode=production",
-    "precommit": "eslint --fix "
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@rrweb/types": "2.0.0-alpha.11",
-    "@svgr/webpack": "^8.0.1",
-    "@swc/core": "^1.3.78",
-    "@types/dom-to-image": "^2.6.4",
-    "@types/html-webpack-plugin": "^3.2.6",
-    "@types/js-cookie": "^3.0.3",
-    "@types/lodash": "^4.14.197",
-    "@types/node": "^20.4.8",
-    "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/webpack": "^5.28.1",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "babel-loader": "^9.1.3",
-    "bundle-stats-webpack-plugin": "^4.5.2",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.1",
-    "html-webpack-plugin": "^5.5.3",
-    "husky": "^8.0.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^3.0.3",
-    "react-dev-utils": "^12.0.1",
-    "style-loader": "^3.3.3",
-    "swc-loader": "^0.2.3",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.9",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  }
+    "name": "qiankun-base",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@ant-design/icons": "^5.2.5",
+        "@sentry/react": "^7.63.0",
+        "antd": "^5.7.3",
+        "axios": "^1.4.0",
+        "dayjs": "^1.11.9",
+        "dom-to-image": "^2.6.0",
+        "echarts": "^5.4.3",
+        "hash.js": "^1.1.7",
+        "html2canvas": "^1.4.1",
+        "js-cookie": "^3.0.5",
+        "lodash": "^4.17.21",
+        "mobx": "^6.10.0",
+        "mobx-react-lite": "^4.0.3",
+        "nprogress": "^0.2.0",
+        "qiankun": "^2.10.11",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^5.3.4",
+        "rrweb": "^2.0.0-alpha.4",
+        "rrweb-player": "^1.0.0-alpha.4"
+    },
+    "scripts": {
+        "start": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "start:base": "cross-env BASE_ENV=true vite",
+        "build:base": "cross-env BASE_ENV=true vite build",
+        "preview:base": "cross-env BASE_ENV=true vite preview",
+        "start-w": "webpack-dev-server --mode=development --config=./webpack.config.js",
+        "start-w:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
+        "build-w": " webpack --mode=production",
+        "precommit": "prettier --write . --ext .ts,.tsx && eslint . --ext .ts,.tsx"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.9",
+        "@babel/plugin-transform-react-jsx": "^7.22.5",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@rrweb/types": "2.0.0-alpha.11",
+        "@svgr/webpack": "^8.0.1",
+        "@swc/core": "^1.3.78",
+        "@types/dom-to-image": "^2.6.4",
+        "@types/html-webpack-plugin": "^3.2.6",
+        "@types/js-cookie": "^3.0.3",
+        "@types/lodash": "^4.14.197",
+        "@types/node": "^20.4.8",
+        "@types/nprogress": "^0.2.0",
+        "@types/react": "^18.2.18",
+        "@types/react-dom": "^18.2.7",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/webpack": "^5.28.1",
+        "@typescript-eslint/eslint-plugin": "^6.2.1",
+        "@typescript-eslint/parser": "^6.2.1",
+        "@vitejs/plugin-react-swc": "^3.3.2",
+        "babel-loader": "^9.1.3",
+        "bundle-stats-webpack-plugin": "^4.5.2",
+        "copy-webpack-plugin": "^11.0.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "^6.8.1",
+        "dotenv": "^16.3.1",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-react": "^7.33.1",
+        "html-webpack-plugin": "^5.5.3",
+        "husky": "^8.0.3",
+        "mini-css-extract-plugin": "^2.7.6",
+        "prettier": "^3.0.3",
+        "react-dev-utils": "^12.0.1",
+        "style-loader": "^3.3.3",
+        "swc-loader": "^0.2.3",
+        "ts-loader": "^9.4.4",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
+        "vite": "^4.4.9",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
+    }
 }
