--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@babel/preset-env": "^7.22.9",
         "@babel/preset-react": "^7.22.5",
         "@babel/preset-typescript": "^7.22.5",
+        "@rollup/plugin-terser": "^0.4.3",
         "@rrweb/types": "2.0.0-alpha.11",
         "@svgr/webpack": "^8.0.1",
         "@swc/core": "^1.3.78",
@@ -87,6 +88,7 @@
         "react-dev-utils": "^12.0.1",
         "style-loader": "^3.3.3",
         "swc-loader": "^0.2.3",
+        "terser-webpack-plugin": "^5.3.9",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6",
