--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "@typescript-eslint/eslint-plugin": "^6.2.1",
         "@typescript-eslint/parser": "^6.2.1",
         "@vitejs/plugin-react-swc": "^3.3.2",
+        "autoprefixer": "^10.4.15",
         "babel-loader": "^9.1.3",
         "bundle-stats-webpack-plugin": "^4.5.2",
         "copy-webpack-plugin": "^11.0.0",
@@ -83,10 +84,16 @@
         "html-webpack-plugin": "^5.5.3",
         "husky": "^8.0.3",
         "mini-css-extract-plugin": "^2.7.6",
+        "postcss": "^8.4.29",
+        "postcss-load-config": "^4.0.1",
+        "postcss-plugin": "^1.0.0",
         "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.4",
         "react-dev-utils": "^12.0.1",
         "style-loader": "^3.3.3",
         "swc-loader": "^0.2.3",
+        "tailwindcss": "^3.3.3",
+        "tailwindcss-vite-plugin": "^0.0.7",
         "terser-webpack-plugin": "^5.3.9",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
