--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "preview": "vite preview",
         "start:base": "cross-env BASE_ENV=true vite",
         "build:base": "cross-env BASE_ENV=true vite build",
+        "build:sourcemap": "cross-env SOURCE_MAP=true vite build",
         "preview:base": "cross-env BASE_ENV=true vite preview",
         "start-w": "webpack-dev-server --mode=development --config=./webpack.config.js",
         "start-w:base": "cross-env BASE_ENV=true webpack-dev-server --mode=development --config=./webpack.config.js ",
@@ -90,6 +91,7 @@
         "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.4",
         "react-dev-utils": "^12.0.1",
+        "rollup-plugin-copy": "^3.5.0",
         "style-loader": "^3.3.3",
         "swc-loader": "^0.2.3",
         "tailwindcss": "^3.3.3",
